# eslide

./: .clang-format  .gitignore  LICENSE  Makefile  Makefile.am  README.md  clock.c  clock.h  common.c  common.h  config.c  config.h  configure.ac  main.c  media.c  media.h  net.c  net.h  news.c  news.h  slideshow.c  slideshow.h  test_cache  test_cache.c  ui.c  ui.h  weather.c  weather.h
.github/workflows/: build.yml  release.yml
data/: eslide.desktop
src/: Makefile.am  app_config.c  app_config.h  clock.c  clock.h  common.h  config.c  main.c  media.h  slideshow.h  weather.h
