bin_PROGRAMS = eslide
noinst_HEADERS = clock.h common.h app_config.h media.h news.h slideshow.h ui.h weather.h
eslide_SOURCES = main.c clock.c common.c app_config.c media.c news.c slideshow.c ui.c weather.c
eslide_CPPFLAGS = $(ELEMENTARY_CFLAGS) $(LIBXML_CFLAGS)
eslide_LDADD = $(ELEMENTARY_LIBS) $(LIBXML_LIBS)
